--- a/vue分离/index/index.html
+++ b/vue分离/index/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>一灯HR系统</title>
+    <title></title>
 </head>
 
 <body>
     <div id="app">
         <index></index>
     </div>
-    <script src="./scripts/"></script>
+    <script src="./scripts/system.js"></script>
     <script src="https://cdn.staticfile.org/vue/2.5.21/vue.js"></script>
     <script>
         var app = new Vue({
